making sure that votes are reset on definition change. prefill definition edit fields with user's previous definition (if it exists)

--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -197,7 +197,7 @@ form.SearchBar {
         display: inline-block;
         vertical-align: middle!important;
     }
-    input[type="text"] {
+    input[type="search"] {
         display: inline-block;
         vertical-align: middle;
         width: 80%;
