--- a/client/src/css/main.scss
+++ b/client/src/css/main.scss
@@ -78,7 +78,7 @@ $base-lightness-contrast: 60%;
 $saturation-contrast-sign: if($ondark, -1, 1);
 $lightness-contrast-sign: if($ondark, 1, -1);
 
-$base-font-size: 60px;
+$base-font-size: 20px;
 //$base-color: #C6C6C6;
 //$base-background-color: #2F2F2F;
 //$base-background-color: hsl(250, 80%, 90%); // light, saurated
@@ -174,6 +174,7 @@ section.SearchBar {
     text-align: center;
     vertical-align: center;
     padding: 1em 0;
+    background: url('/static/assets/img/mexionario-200x126.png')
 }
 form.SearchBar {
     color: $more-contrast-1;
